# xorg__app__xrestop

./: .gitignore  ChangeLog  Makefile.am  configure.ac  xrestop.c
doc/: Makefile.am  xrestop.1
